# dkv

./: .gitignore  Cargo.toml  Makefile  README.md  index.html  src.8b2a3d43.map  src.f437dec1.js
client/: generate_proto.sh  index.html  index.js  package-lock.json  package.json
client-starter/create-react/: package.json
client/js/: main.js
client/pages/: index.js
client/proto/dkv/: dkv_pb.js
client/src/: index.html  index.tsx
client/src/components/: App.tsx  ButtonSubmit.tsx  Dkv.tsx  Hello.tsx  Nav.less  Nav.tsx  Todo.tsx
client/src/pages/: App.tsx  Main.tsx
client/src/proto/dkv/: dkv_grpc_pb.js  dkv_pb.js
proto/: build.rs  build.sh  dkv.desc
proto/proto/dkv/: dkv.proto
proto/src/: lib.rs
src/: distributed.rs  lib.rs
src/backend/: in_mem.rs  local_file.rs  mod.rs
