[package]
name = "dkv"
version = "0.1.0"
authors = ["toidiu"]
license = ""
keywords = ["dkv"]
repository = ""
readme = "README.md"
homepage = ""
description = "dkv"
categories = ["dkv"]

[workspace]
members = ["proto"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
grpcio-sys = "0.2.0"
grpcio = "0.2.0"
libc = "0.2"
futures = "^0.1.15"
protobuf = { version = "1.2", optional = true }
log = "0.3"
grpcio-proto = { path = "proto", version = "0.1.0" }
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
rand = "0.3"
slog = "2.0"
slog-async = "2.1"
slog-stdlog = "3.0"
slog-scope = "4.0"
slog-term = "2.2"
num_cpus = "1.8"
lazy_static = "1.0"

[features]
default = ["protobuf-codec"]
protobuf-codec = ["protobuf"]
secure = ["grpcio-sys/secure"]

[[bin]]
name = "client_set"
path = "src/bin/client_set.rs"

[[bin]]
name = "client_get"
path = "src/bin/client_get.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[profile.release]
debug = true

